[package]
name = "bea"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bea"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.21", features = ["derive"] }
csv = "1.2.2"
dotenv = "0.15.0"
indicatif = { version = "0.17.6", features = ["tokio"] }
nom = "7.1.3"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
