[package]
name = "bea"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bea"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
indicatif = { version = "0.17.8", features = ["tokio"] }
nom = "7.1.3"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
spreadsheet = { git = "https://github.com/grantspassoregon/spreadsheet.git" }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
